--- a/react/hello-world/package.json
+++ b/react/hello-world/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/SeanPlusPlus/WebDevTemplates/tree/master/react/hello-world"
   },
   "version": "1.0.0",
   "description": "hello world",
@@ -13,29 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel": "^5.5.6",
-    "babel-core": "^5.5.7",
-    "babel-jest": "^6.0.1",
-    "babel-loader": "^5.1.4",
-    "babel-plugin-syntax-class-properties": "^6.3.13",
-    "babel-plugin-transform-class-properties": "^6.4.0",
-    "babel-preset-react": "^6.3.13",
-    "history": "1.17.0",
-    "jest-cli": "^0.8.2",
-    "jquery": "^2.2.0",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "live-server": "^0.8.2",
     "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.6",
-    "react-bootstrap": "^0.28.1",
-    "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^0.14.6",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
-    "react-time": "^4.0.0",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.0.4",
-    "redux-promise-middleware": "^2.3.1",
-    "redux-router": "^1.0.0-beta5",
     "webpack": "^1.12.9"
   }
 }
