--- a/react/hello-world/package.json
+++ b/react/hello-world/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-polyfill": "^6.0.0",
     "live-server": "^0.8.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
