--- a/hello-world/hello-react/package.json
+++ b/hello-world/hello-react/package.json
@@ -3,21 +3,39 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/SeanPlusPlus/WebDevTemplates/tree/master/react/hello-world"
+    "url": "https://github.com/SeanPlusPlus/"
   },
   "version": "1.0.0",
   "description": "hello world",
   "scripts": {
+    "test": "jest",
     "start": "./node_modules/.bin/webpack --progress --watch & ./node_modules/.bin/live-server --entry-file=index.html --ignore=src"
   },
-  "author": "",
+  "author": "stoked",
   "license": "ISC",
+  "jest": {
+    "testRunner": "<rootDir>/node_modules/jest-cli/src/testRunners/jasmine/jasmine2",
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "testFileExtensions": ["es6", "js"],
+    "moduleFileExtensions": ["js", "json", "es6"]
+  },
   "dependencies": {
     "babel-core": "^6.5.2",
+    "babel-jest": "^6.0.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.0.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-polyfill": "^6.0.0",
+    "jest-cli": "^0.8.2",
     "live-server": "^0.8.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
