--- a/hello-world/hello-react/package.json
+++ b/hello-world/hello-react/package.json
@@ -25,8 +25,15 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ],
-    "testFileExtensions": ["es6", "js"],
-    "moduleFileExtensions": ["js", "json", "es6"]
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ]
   },
   "dependencies": {
     "babel-core": "^6.5.2",
@@ -38,6 +45,7 @@
     "jest-cli": "^0.8.2",
     "live-server": "^0.8.2",
     "react": "^0.14.6",
+    "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9"
   }
