--- a/hello-world/hello-react/package.json
+++ b/hello-world/hello-react/package.json
@@ -46,6 +46,7 @@
     "live-server": "^0.8.2",
     "react": "^0.14.6",
     "react-addons-test-utils": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9"
   }
