--- a/single-page-app/react/package.json
+++ b/single-page-app/react/package.json
@@ -43,13 +43,22 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "history": "^2.0.0",
     "jest-cli": "^0.8.2",
     "jquery": "^2.2.1",
     "live-server": "^0.8.2",
     "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.7",
-    "react-bootstrap": "^0.28.3",
+    "react-addons-test-utils": "^0.14.6",
+    "react-bootstrap": "^0.28.1",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^0.14.6",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
+    "react-time": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-promise-middleware": "^2.3.1",
+    "redux-router": "^1.0.0-beta5",
     "webpack": "^1.12.9"
   }
 }
